<resources>
    <string name="app_name">Webim Tz</string>
    <string name="prompt_login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Log in</string>
    <string name="wrong_login">Wrong login</string>
    <string name="wrong_password">Wrong password</string>
    <string name="something_wrong">Something clearly went wrong</string>
    <string name="no_internet">No internet connection</string>
    <string name="tickets">Tickets</string>
    <string name="from_to_dest">%1$s · %2$s</string>
    <string name="no_tickets_message">No tickets</string>
    <string name="price_high_to_low">Price (High to Low)</string>
    <string name="price_low_to_high">Price (Low to High)</string>
    <string name="sorted_by">Sorted by:</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
</resources>