<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <TextView
        android:id="@+id/unknownErrorTextView"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="64dp"
        android:gravity="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="12sp"
        tools:text="@string/something_wrong" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="1dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/accent"
        android:indeterminateTintMode="src_in"
        android:translationZ="1dp"
        android:visibility="gone"
        tools:ignore="UnusedAttribute"
        tools:visibility="visible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fitsSystemWindows="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/loginLogo"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_marginTop="-64dp"
                android:layout_marginBottom="24dp"
                android:src="@drawable/ic_webim_icon" />

            <TextView
                android:id="@+id/loginError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="end"
                android:paddingEnd="8dp"
                android:textColor="@android:color/holo_red_light"
                android:textSize="12sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext_top_rounded"
                android:hint="@string/prompt_login"
                android:inputType="text"
                android:maxLines="1"
                android:padding="12dp"
                android:singleLine="true"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext_bottom_rounded"
                android:hint="@string/password"
                android:maxLines="1"
                android:singleLine="true"
                android:padding="12dp"
                android:password="true"/>

            <TextView
                android:id="@+id/passwordError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="end"
                android:paddingEnd="8dp"
                android:textColor="@android:color/holo_red_light"
                android:textSize="12sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:padding="12dp"
                android:text="@string/sign_in"
                app:cornerRadius="8dp" />


        </LinearLayout>
    </ScrollView>
</FrameLayout>